2003-08-15  Theodore A. Roth  <troth@openavr.org>

	* include/avr/pgmspace.h: Remove extraneous empty lines.

2003-08-14  Theodore A. Roth  <troth@openavr.org>

	* doc/api/rel-method.dox: Fix typo.

2003-08-14  Theodore A. Roth  <troth@openavr.org>

	* README: Discuss required versions of gcc and binutils.
	* doc/api/Makefile.am (EXTRA_DIST): Add rel-method.dox.
	(IMAGE_SRC): Add releases.fig.
	* doc/api/main_page.dox: Grammar fix.
	* doc/api/rel-method.dox: New file.
	* doc/api/releases.fig: New file.

2003-08-11  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Fix bug with not using generic SPM Control
	Register.

2003-08-11  Theodore A. Roth  <troth@openavr.org>

	* devtools/cr_check.py: New file.

2003-08-11  Theodore A. Roth  <troth@openavr.org>

	* include/string.h: Remove extra carriage returns.
	* include/avr/interrupt.h: Remove extra carriage returns.
	* include/avr/pgmspace.h: Remove extra carriage returns.
	* include/avr/sfr_defs.h: Remove extra carriage returns.
	* libc/misc/ee_wblk.S: Remove extra carriage returns.
	* libc/misc/ee_ww.S: Remove extra carriage returns.

2003-08-06  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/inline_asm.dox: Fix broken link to ethernut site.

2003-07-21  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Make common bit definitions to handle the mega323.

2003-07-17  Eric B. Weddington  <eric@ecentral.com>

	New functions eeprom_write_word and eeprom_write_block from
	Artur Lipowski <LAL@pro.onet.pl>
	* libc/misc/eeprom.S: New functions, add const to parameters of read
	functions.
	* libc/misc/eeprom_ww.S: New file.
	* libc/misc/eeprom_wblk.S: New file.
	* include/avr/eeprom.h: New functions.
	* libc/misc/Makefile.am: Add new modules.
	* NEWS: Note about new functions.
	
2003-07-10  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Fix doxygen.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>
